hello-from-go/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-from-go
spec:
  selector:
    app: hello-from-go
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
