hello-from-go/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-from-go
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: hello-from-go.diegoops.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello-from-go
            port:
              number: 8080
